--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -20,7 +20,7 @@
                 <div>
                     <!-- <img class="mx-auto h-16 w-auto" src="{% static 'img/mitc-logo-trans.png' %}"
                         alt="Workflow"> -->
-                    <h2 class="mb-6 text-center text-3xl font-extrabold text-gray-900">ADD A STAFF</h2>
+                    <h2 class="mb-6 text-center text-3xl font-extrabold text-gray-900">Add a Staff</h2>
                 </div>
                 
                 <!-- Form -->
@@ -29,7 +29,7 @@
                     <input type="hidden" name="remember" value="true">
 
                     <!-- Form fields -->
-                    <div class="space-y-4">                        
+                    <div class="space-y-px">                        
                         {% for field in form %}                                
                             <div>
                                 <!-- <p class="font-bold text-gray-700">{{ field.label_tag }}</p>                                     -->
@@ -60,13 +60,14 @@
                 </form>
                          
                 <!-- Back to Home page -->
-                <div class="container flex items-center">
+                <div class="container flex items-center justify-center">
+                    <!-- Dashboard -->
                     <a href="{% url 'index' %}"
-                        class="inline-flex text-sm font-medium mx-auto text-gray-700 mt-8 px-4 py-2 border 
+                        class="inline-flex text-sm font-semibold text-gray-700 mt-4 mr-1 px-4 py-2 border 
                             rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
                             focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                             </svg>
                             Dashboard
                     </a>
