--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -1,12 +1,12 @@
 {% load static tailwind_tags %}
-{% load static %}
 {% load widget_tweaks %}
+{% load static %}
 
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>All Staff</title>
+    <title>{{ title }}</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +17,7 @@
         <div class="p-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-8 min-h-full justify-center">
             <div class="flex justify-between items-center mb-4">
                 <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>
-                <a href="{% url 'index' %}" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
+                <a href="{% url 'index' %}" class="text-sm font-medium text-blue-600 underline underline-offset-2 dark:text-blue-500">
                     Back to Dashboard
                 </a>
             </div>
@@ -29,7 +29,7 @@
                             <!-- Profile Picture -->
                             <div class="flex items-center space-x-4">
                                 <div class="flex-shrink-0">
-                                    <img class="w-14 h-14 rounded-full" src="{{ staff.image.url }}"
+                                    <img class="w-14 h-14 rounded-full" src="{{ staff.staffimage.url }}"
                                         alt="{{ staff.first_name }}'s' image">
                                 </div>
                                 
@@ -77,7 +77,7 @@
                 <div class="container font-medium text-gray-500 text-md flex items-center justify-center mt-8 pagination ">
                     <span class="page-links flex items-center justify-between">
                         {% if page_obj.has_previous %}
-                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 hover:bg-gray-50 bg-white text-gray-700 rounded-md border border-gray-300" 
+                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 hover:bg-gray-50 bg-white text-gray-700 rounded-md border border-gray-400" 
                                 href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
                                 Previous
                             </a>
@@ -86,7 +86,7 @@
                             page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                         </span>
                         {% if page_obj.has_next %}
-                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 text-gray-700 rounded-md border border-gray-300" 
+                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 text-gray-700 rounded-md border border-gray-400" 
                                 href="{{ request.path }}?page={{ page_obj.next_page_number }}">
                                 Next
                             </a>
