--- a/sendmail/templates/temp.html
+++ b/sendmail/templates/temp.html
@@ -1,72 +1,126 @@
+<!-- 1st design -->
+<div class="min-h-full flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8">
+    <div class="max-w-lg w-full">
+        <!-- Title -->
+        <div>
+            <!-- <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+                {{ staff.last_name }}, 
+                {{ staff.first_name }}
+                {% if staff.middle_name %}
+                    {{ staff.middle_name }}
+                    {% else %}
+                    <span></span>
+                {% endif %} 
+            </h2> -->
+        </div>
+        
+        <!-- Staff Details -->
+        <section class="-mt-4">
+            <!-- First Name -->
+            <div>
+                <p class="font-medium text-gray-500 lg:text-gray-500">First Name</p>
+                <p class="text-2xl text-gray-700 font-bold">{{ staff.first_name }}</p>
+                <br>
+            </div>
 
-        <!-- This example requires Tailwind CSS v2.0+ -->
-        <div class="bg-white max-w-3xl w-full space-y-px mx-auto shadow overflow-hidden sm:rounded-lg">
-            <div class="px-4 py-5 sm:px-6">
-                <h3 class="text-2xl leading-6 font-medium text-gray-900">Staff Information</h3>
-                <p class="mt-1 max-w-2xl text-md text-gray-500">Personal details and application.</p>
+            <!-- Middle Name -->
+            <div>
+                <p class="font-medium text-gray-500 lg:text-gray-500">Middle Name</p>                        
+                <p class="text-2xl text-gray-700 font-bold">
+                    {% if staff.middle_name %}
+                        {{ staff.middle_name }}                            
+                        {% else %}
+                        nil
+                    {% endif %}
+                </p>
+                <br>
             </div>
-            <div class="border-t border-gray-200">
-                <dl>
-                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">Full name</dt>
-                        <dd class="mt-1 font-bold text-1xl text-gray-900 sm:mt-0 sm:col-span-2">{{ staff.first_name }}</dd>
-                    </div>
-                    <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">Application for</dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Backend Developer</dd>
-                    </div>
-                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">Email address</dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">margotfoster@example.com</dd>
-                    </div>
-                    <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">Salary expectation</dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">$120,000</dd>
-                    </div>
-                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">About</dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Fugiat ipsum ipsum deserunt culpa aute sint
-                            do nostrud anim incididunt cillum culpa consequat. Excepteur qui ipsum aliquip consequat sint. Sit
-                            id mollit nulla mollit nostrud in ea officia proident. Irure nostrud pariatur mollit ad adipisicing
-                            reprehenderit deserunt qui eu.</dd>
-                    </div>
-                    <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">Attachments</dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                            <ul role="list" class="border border-gray-200 rounded-md divide-y divide-gray-200">
-                                <li class="pl-3 pr-4 py-3 flex items-center justify-between text-sm">
-                                    <div class="w-0 flex-1 flex items-center">
-                                        <!-- Heroicon name: solid/paper-clip -->
-                                        <svg class="flex-shrink-0 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                            <path fill-rule="evenodd"
-                                                d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                        <span class="ml-2 flex-1 w-0 truncate"> resume_back_end_developer.pdf </span>
-                                    </div>
-                                    <div class="ml-4 flex-shrink-0">
-                                        <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> Download </a>
-                                    </div>
-                                </li>
-                                <li class="pl-3 pr-4 py-3 flex items-center justify-between text-sm">
-                                    <div class="w-0 flex-1 flex items-center">
-                                        <!-- Heroicon name: solid/paper-clip -->
-                                        <svg class="flex-shrink-0 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                            <path fill-rule="evenodd"
-                                                d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                        <span class="ml-2 flex-1 w-0 truncate"> coverletter_back_end_developer.pdf </span>
-                                    </div>
-                                    <div class="ml-4 flex-shrink-0">
-                                        <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> Download </a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </dd>
-                    </div>
-                </dl>
+
+            <!-- Last Name -->
+            <div>
+                <p class="font-medium text-gray-500 lg:text-gray-500">Last Name</p>
+                <p class="text-2xl text-gray-700 font-bold">{{ staff.last_name }}</p>
+                <br>
             </div>
-        </div> 
+
+            <!-- Phone Number -->
+            <div>
+                <p class="font-medium text-gray-500 lg:text-gray-500">Phone Number</p>
+                <p class="text-2xl text-gray-700 font-bold">{{ staff.phone_number }}</p>
+                <br>
+            </div>
+
+            <!-- Email -->
+            <div>
+                <p class="font-medium text-gray-500 lg:text-gray-500">Email</p>
+                <p class="text-2xl text-gray-700 font-bold">{{ staff.email }}</p>
+                <br>
+            </div>
+
+            <!-- Birthday -->
+            <div>
+                <p class="font-medium text-gray-500 lg:text-gray-500">Birthday</p>
+                <p class="text-2xl text-gray-700 font-bold">{{ staff.birth_month }} {{ staff.birth_day }}</p>
+                <br>
+            </div>
+        </section>
+                
+        <!-- Buttons -->
+        <div class="mt-4 -mb-4 mx-auto flex float-right">
+
+            <!-- Back to Dashboard -->
+            <a  href="{% url 'index' %}">
+                <button type="button" class="inline-flex items-center mr-1 px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+                                        text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
+                                        focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                    </svg>
+                    Dashboard
+                </button>
+            </a>
+
+            <!-- Stafflist -->
+            <a  href="{% url 'stafflist' %}">
+                <button type="button" class="inline-flex items-center mr-1 ml-1 px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+                                        text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
+                                        focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+                    </svg>
+                    Stafflist
+                </button>
+            </a>
+
+            <!-- Update -->
+            <a href="{% url 'updatestaff' staff.id %}">
+                <button type="button" class="inline-flex items-center mr-1 ml-1 px-4 py-2 border border-green-500 rounded-md shadow-sm 
+                                        text-sm font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
+                                        focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-300">
+                    <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                    </svg>
+                    Update
+                </button>
+            </a>
+
+            <!-- Remove -->
+            <a>
+                <button type="button" class="inline-flex items-center ml-1 px-4 py-2 border border-red-600 rounded-md shadow-sm 
+                                        text-sm font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
+                                        focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                    </svg>
+                    Remove
+                </button>
+            </a>
+        </div>
+    </div>
+</div>
