--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -20,8 +20,8 @@
                 <div class="w-full">
                     <!-- <img class="mx-auto h-16 w-auto" src="{% static 'img/mitc-logo-trans.png' %}"
                         alt="Workflow"> -->
-                    <h2 class="mb-6 text-center text-3xl font-bold text-gray-900">
-                        Update <span class="font-extrabold underline underline-offset-2">"{{ staff.first_name }} {{ staff.last_name }}"</span>
+                    <h2 class="mb-8 text-center text-3xl font-extrabold text-gray-900">
+                        Update "<span class="underline underline-offset-2">{{ staff.first_name }} {{ staff.last_name }}</span>"
                     </h2>
                 </div>
                 
@@ -31,7 +31,7 @@
                     <input type="hidden" name="remember" value="true">
 
                     <!-- Form fields -->
-                    <div class="space-y-4">                        
+                    <div class="space-y-2">                        
                         {% for field in form %}                                
                             <div>
                                 {% if not field %}
@@ -66,13 +66,27 @@
                 </form>
                          
                 <!-- Back to Staff List -->
-                <div class="container flex items-center">
-                    <a href="{% url 'stafflist' %}"
-                        class="inline-flex text-sm font-semibold mx-auto text-gray-700 mt-8 px-4 py-2 border 
+                <div class="container flex items-center justify-center">
+                    <!-- Dashboard -->
+                    <a href="{% url 'index' %}"
+                        class="inline-flex text-sm font-semibold text-gray-700 mt-8 mr-1 px-4 py-2 border 
                             rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
                             focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                            </svg>
+                            Dashboard
+                    </a>
+
+                    <!-- Staff List -->
+                    <a href="{% url 'stafflist' %}"
+                        class="inline-flex text-sm font-semibold text-gray-700 ml-1 mt-8 px-4 py-2 border 
+                            rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
+                            focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                                stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
                             </svg>
                             Stafflist
                     </a>
