updated staffdetails.html 12:58am 09/06/2022

--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -13,27 +13,30 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-200 font-sans leading-normal tracking-normal">
+	<body class="bg-gray-300 font-sans leading-normal tracking-normal">
+
+        <!-- Outer Container -->
         <div class="min-h-full flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8">
-            <div class="max-w-md w-full space-y-px">
+
+            <!-- Inner Container -->
+            <div class="max-w-2xl lg:max-w-lg w-full space-y-px bg-white shadow-md rounded-lg px-10 py-6">
+                
                 <!-- Title -->
                 <div>
-                    <!-- <img class="mx-auto h-16 w-auto" src="{% static 'img/mitc-logo-trans.png' %}"
-                        alt="Workflow"> -->
                     <h2 class="mb-6 text-center text-3xl font-extrabold text-gray-900">Add a Staff</h2>
                 </div>
                 
                 <!-- Form -->
-                <form class="mt-8 space-y-4" action="" method="POST" enctype="multipart/form-data">
+                <form class="mt-8 space-y-4 max-w-1xl mx-auto" action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <input type="hidden" name="remember" value="true">
 
                     <!-- Form fields -->
-                    <div class="space-y-px">                        
+                    <div class="space-y-2">                        
                         {% for field in form %}                                
                             <div>
                                 <!-- <p class="font-bold text-gray-700">{{ field.label_tag }}</p>                                     -->
-                                {% render_field field placeholder=field.label class+="lg:text-md font-medium relative block w-full p-3 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                  
+                                {% render_field field placeholder=field.label class+="lg:text-md font-medium relative block w-full p-3 border bg-gray-100 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                  
                             </div> 
                         {% endfor %}
                     </div>        
