--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -16,7 +16,7 @@
 	<body class="bg-gray-300 font-sans py-8 px-4">
         
         <!-- Profile card -->
-        <div class="min-h-full container mx-auto my-auto items-center max-w-lg w-full bg-white rounded-lg 
+        <div class="min-h-full container mx-auto items-center max-w-lg w-full bg-white rounded-lg 
                     border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
             <div class="flex justify-end px-4 pt-4">
 
@@ -55,7 +55,7 @@
             
             <div class="flex flex-col items-center pb-10 space-y-4">
                 <!-- Staff image -->
-                <img class="mb-3 w-24 h-24 rounded-full shadow-lg" src="{{ staff.staffimage.url }}" alt="{{ staff.first_name }} image">
+                <img class="mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staffimage.url }}" alt="{{ staff.first_name }} image">
 
                 <!-- Name -->
                 <div>
@@ -71,9 +71,13 @@
                 </div>
                 
                 <!-- Position -->
-                <div>
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Visual Designer</p>
-                </div>
+                {% if staff.position %}                
+                    <div>
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.position }}</p>
+                    </div>
+                    {% else %}
+                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400">Position: nil</span>
+                {% endif %}
 
                 <!-- Phone Number -->
                 {% if staff.phone_number %}
@@ -81,7 +85,7 @@
                         <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number }}</p>
                     </div>
                     {% else %}  
-                        <span></span>                     
+                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400">Phone Number: nil</span>                     
                 {% endif %}
                 
                 <!-- Email -->
@@ -90,8 +94,11 @@
                 </div>
 
                 <!-- Birthday -->
-                <div>
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month }} {{ staff.birth_day }}</p>
+                <div class="inline-flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M6 3a1 1 0 011-1h.01a1 1 0 010 2H7a1 1 0 01-1-1zm2 3a1 1 0 00-2 0v1a2 2 0 00-2 2v1a2 2 0 00-2 2v.683a3.7 3.7 0 011.055.485 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0A3.7 3.7 0 0118 12.683V12a2 2 0 00-2-2V9a2 2 0 00-2-2V6a1 1 0 10-2 0v1h-1V6a1 1 0 10-2 0v1H8V6zm10 8.868a3.704 3.704 0 01-4.055-.036 1.704 1.704 0 00-1.89 0 3.704 3.704 0 01-4.11 0 1.704 1.704 0 00-1.89 0A3.704 3.704 0 012 14.868V17a1 1 0 001 1h14a1 1 0 001-1v-2.132zM9 3a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1zm3 0a1 1 0 011-1h.01a1 1 0 110 2H13a1 1 0 01-1-1z" clip-rule="evenodd" />
+                    </svg>
+                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
                 </div>
                 <br>
 
