--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -12,7 +12,7 @@
 	</head>
 
 	<body class="bg-gray-50 font-sans">
-		<div class="container mx-auto">
+		<div class="container">
 			<!-- Edit -->
 			<section class="flex items-center justify-center h-screen" role="group">
 				<!-- <h1 class="text-5xl">Django + Tailwind = ❤️</h1><br> -->
