--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -74,7 +74,7 @@
                 </div>
                 
                 <!-- Position -->               
-                <div class="inline-flex items-center">
+                <div class="inline-flex items-center justify-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                         stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -83,7 +83,7 @@
                     {% if staff.position %} 
                         <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.position }}</p>                    
                         {% else %}
-                            <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>position not given</em></span>
+                            <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
                     {% endif %}
                 </div>
 
@@ -149,9 +149,9 @@
 
                     <!-- Remove -->
                     <a>
-                        <button type="button" class="inline-flex items-center ml-1 px-4 py-2 border border-red-600 rounded-md shadow-sm 
-                                                text-md font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
-                                                focus:outline-none focus:ring-4 focus:ring-red-400">
+                        <button type="button" class="inline-flex items-center ml-1 px-4 py-2 border border-red-700 rounded-md shadow-sm 
+                                                text-md font-medium text-white bg-red-700 hover:border-red-600 hover:bg-red-600 
+                                                focus:outline-none focus:ring-4 focus:ring-red-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
