--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -14,7 +14,6 @@
 	</head>
 
     <body class="bg-gray-200 font-sans py-8 px-4">
-        
         <!-- Search bar -->
         <div class="max-w-3xl rounded-lg mx-auto mb-8">
             
@@ -46,26 +45,27 @@
             </form>
         </div>
 
-
         <!-- Staff list -->
         <div class="p-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
             <div class="flex justify-between items-center mb-4">
-                <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>
-                
-                <!-- Return to Dashboard link -->
-                <a href="{% url 'index' %}"  class="hover:underline hover:underline-offset-2 mr-2">
+                <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">
+                    Search Results for "{{ query }}"
+                </h5>
+
+                <!-- Return to stafflist link -->
+                <a href="{% url 'stafflist' %}"  class="hover:underline hover:underline-offset-2 mr-2">
                     <span class="inline-flex items-center text-md font-bold text-indigo-600 hover:underline hover:underline-offset-2">
                         <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6 hover:underline hover:underline-offset-2" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M7 16l-4-4m0 0l4-4m-4 4h18" />
                         </svg>
-                        Dashboard
+                        Return to Stafflist
                     </span>
                 </a>
             </div>
             <div class="flow-root">
                 <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
-                    {% for staff in stafflist %}
+                    {% for staff in searchresult %}
                         <li class="py-3 sm:py-4">
                             
                             <!-- Profile Picture -->
@@ -111,7 +111,7 @@
                     {% endfor %}
                 </ul>
             </div>
-        </div>   
+        </div> 
 
         <!-- Pagination -->
         {% block pagination %}
@@ -133,7 +133,7 @@
                             <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 
                                     text-gray-700 rounded-md border border-gray-300 hover:bg-gray-50 focus:outline-none 
                                     focus:ring-2 focus:ring-gray-400" 
-                                href="{{ request.path }}?page={{ page_obj.next_page_number }}">
+                                href="{{ request.path }}?page={{ object_list.next_page_number }}">
                                 Next
                             </a>
                         {% endif %}
@@ -141,6 +141,6 @@
                 </div>
             {% endif %}
         {% endblock %}
+    
     </body>
 </html>
-
